--- a/wui/static/css/main.css
+++ b/wui/static/css/main.css
@@ -1246,6 +1246,36 @@ textarea.materialize-textarea {
     border-bottom-color: var(--ez-checkbox-fill-col);
 }
 
+ez-radio-buttons {
+    display: flex;
+    flex-direction: column;
+}
+
+ez-radio-buttons > label {
+    margin-bottom: .5rem;
+}
+
+ez-radio-buttons > .helper-text {
+    position: relative;
+    min-height: 18px;
+    display: block;
+    font-size: 12px;
+}
+
+ez-radio-buttons:not(.invalid) > .helper-text {
+    display: none;
+}
+
+ez-radio-buttons.invalid > .helper-text:after {
+    content: attr(data-error);
+    color: #F44336;
+}
+
+ez-radio-buttons.invalid [type="radio"]:not(:checked)+span:before,
+ez-radio-buttons.invalid [type="radio"]:not(:checked)+span:after {
+    border-color: #F44336;
+}
+
 [type="radio"]:not(:checked)+span,
 [type="radio"]:checked+span {
     font-size: 1.4rem;
@@ -1266,6 +1296,11 @@ textarea.materialize-textarea {
 [type="radio"].with-gap:checked+span:after {
     border-color: var(--ez-checkbox-fill-col);
 }
+
+[type="radio"]:checked+span {
+    color: #000;
+}
+
 
 /** Modals **/
 
