--- a/wui/static/css/main.css
+++ b/wui/static/css/main.css
@@ -1691,6 +1691,7 @@ ezc-item-type {
     display: flex;
     justify-content: center;
     width: 3rem;
+    padding-bottom: .6rem;
 }
 
 ezc-item-type-text {
@@ -1722,6 +1723,7 @@ ezc-left .ezc-item-checkbox {
     width: 3rem;
     padding: .1rem 0 0 .5rem;
     cursor: pointer;
+    font-size: 1rem;
 }
 
 ezc-left .ezc-item-checkbox span.dummy,
@@ -1890,6 +1892,9 @@ ezc-fold-value {
 
 ezc-trailer {
     display: flex;
+}
+ezc-trailer.placeholder {
+    width: 2.4rem;
 }
 
 ezc-expand-trailer {
