EZ-1506 code editor check unsaved changes, show text preview at first for adoc exercises, fix navbar padding

--- a/wui/static/css/main.css
+++ b/wui/static/css/main.css
@@ -60,7 +60,8 @@ html.wui3 body {
 
 html.wui3 .container {
     width: 100%;
-    padding: 0 4rem 4rem 4rem;
+    padding-left: 4rem;
+    padding-right: 4rem;
 }
 
 /* TODO: remove */
