EZ-1506 fix modals - cannot be inside cq container, now in global ez-modals

--- a/wui/static/css/main.css
+++ b/wui/static/css/main.css
@@ -92,6 +92,10 @@ html.wui3 .content-container {
     }
 }
 
+main {
+    font-size: 1.5rem;
+}
+
 
 
 /* TODO: remove */
@@ -348,7 +352,6 @@ div.container {
 }
 
 #content-container {
-    font-size: 1.5rem;
     padding-bottom: 3rem;
 }
 
