EZ-1399 update course exercise title alias in exercises list

--- a/wui/static/css/main.css
+++ b/wui/static/css/main.css
@@ -580,7 +580,11 @@ nav.crumb-wrap .breadcrumb:before {
 }
 
 
-/** Exercises page **/
+/** Course exercises page **/
+
+.update-course-ex-title-modal ez-attr {
+    padding-bottom: 2rem;
+}
 
 #exercises-list .exercise-item {
     display: flex;
