--- a/wui/static/css/exercise.css
+++ b/wui/static/css/exercise.css
@@ -14,6 +14,7 @@
     background-color: #f6f6f6;
     color: #333;
     font-style: normal;
+    font-size: .9em;
 }
 
 #exercise-text code strong {
