--- a/wui/static/css/main.css
+++ b/wui/static/css/main.css
@@ -20,6 +20,7 @@
     --ez-flat-btn-disabled-border-col: rgba(0, 0, 0, .1);
     --ez-flat-btn-border-col: rgba(0, 0, 0, .3);
     --ez-btn-danger-col: #df483d;
+    --ez-btn-active-text: #fff;
     --ez-btn-disabled-text: #9f9f9f;
 
     --ezc-attr-immutable-col: rgba(0, 0, 0, .44);
@@ -922,10 +923,6 @@ ez-participants-list {
     margin-top: 1rem;
 }
 
-ez-participants-list ez-coll-wrap:not([has-selection]) ezc-ctrl {
-    padding-top: 0;
-}
-
 ez-participants-list ez-block {
     width: 50rem;
     padding-right: 3rem;
@@ -935,9 +932,6 @@ ez-participants-list ez-block {
 ez-participants-list .card .card-content p {
     margin-bottom: 1rem;
 }
-
-
-
 
 
 /** Grade table page **/
@@ -1765,7 +1759,11 @@ ez-coll-wrap {
 ezc-ctrl {
     display: flex;
     justify-content: space-between;
-    padding: 1rem 0 1rem 1.3rem;
+    padding: 2rem 0 1rem 1.3rem;
+}
+
+ez-coll-wrap:not([has-selection]) ezc-ctrl {
+    padding-bottom: 0;
 }
 
 ezc-ctrl-left {
@@ -1818,16 +1816,12 @@ ezc-ctrl-left a.dropdown-trigger.disabled ez-icon {
     color: var(--ez-flat-btn-disabled-border-col);
 }
 
+ezc-ctrl-filter[filter="on"] ez-icon-action {
+    background-color: var(--ez-green);
+}
+
 ezc-ctrl-filter[filter="on"] ez-icon > svg {
-    color: var(--ez-checkbox-fill-col);
-}
-
-ezc-ctrl-filter[filter="on"] ez-icon.filter-disabled-icon {
-    display: none;
-}
-
-ezc-ctrl-filter[filter="off"] ez-icon.filter-enabled-icon {
-    display: none;
+    color: var(--ez-btn-active-text);
 }
 
 ezc-ctrl-filter .dropdown-content li.optgroup:not(:first-child) {
@@ -1914,8 +1908,12 @@ ezc-ctrl-order .dropdown-content li label span {
     font-size: 1.4rem;
 }
 
+ezc-ctrl-order[custom-order="on"] ez-icon-action {
+    background-color: var(--ez-green);
+}
+
 ezc-ctrl-order[custom-order="on"] ez-icon > svg {
-    color: var(--ez-checkbox-fill-col);
+    color: var(--ez-btn-active-text);
 }
 
 ez-coll {
@@ -2061,6 +2059,10 @@ ezc-item.inactive ezc-title {
 
 ezc-title > a {
     color: inherit;
+    padding: .8rem 1rem .8rem .3rem;
+}
+
+ezc-item.two-rows ezc-title > a {
     padding: .5rem 1rem .5rem 0;
 }
 
@@ -2071,6 +2073,9 @@ ezc-title > a:hover[href] {
 ezc-second {
     display: flex;
     justify-content: space-between;
+}
+
+ezc-item.two-rows ezc-second {
     min-height: 24px;
 }
 
@@ -2132,6 +2137,7 @@ ezc-attr.bottom:after {
 
 ezc-attr-text {
     display: flex;
+    align-items: center;
     color: var(--ezc-attr-immutable-col);
 }
 
@@ -2184,6 +2190,20 @@ ezc-progress-bar {
 ezc-progress-bar-part {
     display: inline-flex;
     height: .4rem;
+}
+
+ez-progress-label {
+    flex-shrink: 0;
+    margin-right: 2rem;
+}
+
+ezc-progress-label-circle {
+    display: inline-flex;
+    width: 1rem;
+    flex-shrink: 0;
+    height: 1rem;
+    border-radius: 50%;
+    margin-right: .5rem;
 }
 
 ezc-trailer {
