--- a/wui/static/css/main.css
+++ b/wui/static/css/main.css
@@ -641,7 +641,7 @@ nav.crumb-wrap .breadcrumb:before {
 /** Exercise page **/
 
 #global-exercise ez-tabs.toplevel > ez-tabs-content {
-    margin-top: 3rem;
+    margin-top: 2rem;
 }
 
 @container tabs (width < 750px) {
@@ -707,6 +707,10 @@ ez-exercise-permissions ez-permission-name ez-icon {
 ez-exercise-permissions ez-permission-email {
     font-size: 1.2rem;
     color: var(--ezc-attr-immutable-col);
+}
+
+ez-exercise-autoeval > ez-block-container {
+    margin-top: 3rem;
 }
 
 
@@ -1130,7 +1134,7 @@ ez-btn-content {
 
 /* if icon with text, add space between */
 ez-btn-content ez-btn-icon ~ ez-btn-text {
-    padding-left: .6rem;
+    padding-left: .8rem;
 }
 
 /* visible spinner */
@@ -2675,18 +2679,25 @@ ez-tabs .editor-wrapper {
 
 /** Assessment view **/
 
-pre.feedback {
+ez-assessment {
+    display: flex;
+    flex-direction: column;
+    justify-content: start;
+    margin-bottom: 2rem;
+}
+
+ez-assessment pre.feedback {
     font-size: 1.4rem;
     white-space: normal;
 }
 
-pre.auto-feedback {
+ez-assessment pre.auto-feedback {
     background-color: #f5f5f5;
     white-space: pre;
     overflow: auto;
 }
 
-.grade-number {
+ez-assessment .grade-number {
     font-weight: 500;
 }
 
