EZ-1505 permissions sidenav action and modal now available for current dir in library and exercise in exercise page

--- a/wui/static/css/main.css
+++ b/wui/static/css/main.css
@@ -1256,7 +1256,7 @@ input[type=tel]:not(.browser-default)::placeholder,
 input[type=number]:not(.browser-default)::placeholder,
 input[type=search]:not(.browser-default)::placeholder,
 textarea.materialize-textarea::placeholder {
-    color: #bbb;
+    color: #777;
 }
 
 input:not([type]):focus:not([readonly]),
