EZ-1546 allow setting "visible from" for course exercises from course exercises list

--- a/wui/static/css/main.css
+++ b/wui/static/css/main.css
@@ -1569,7 +1569,7 @@ ez-radio-buttons.invalid [type="radio"]:not(:checked)+span:after {
 .modal {
     max-width: 55rem;
     max-height: 80%;
-    overflow-y: inherit;
+    overflow-y: auto;
 }
 
 .modal.fixed-footer.open {
@@ -1737,11 +1737,6 @@ ez-spinner.preloader-wrapper {
 
 ez-spinner .spinner-layer {
     border-color: var(--ez-checkbox-fill-col);
-}
-
-.btn ez-spinner .spinner-layer,
-.btn-flat ez-spinner .spinner-layer {
-    border-color: var(--ez-btn-disabled-text);
 }
 
 ez-spinner .circle-clipper .circle {
